tests/baselines/reference/commaOperatorInvalidAssignmentType.errors.txt
commaOperatorInvalidAssignmentType.ts(10,1): error TS2322: Type 'string' is not assignable to type 'boolean'.
commaOperatorInvalidAssignmentType.ts(11,1): error TS2322: Type 'number' is not assignable to type 'boolean'.
commaOperatorInvalidAssignmentType.ts(13,1): error TS2322: Type 'boolean' is not assignable to type 'number'.
commaOperatorInvalidAssignmentType.ts(14,1): error TS2322: Type 'string' is not assignable to type 'number'.
commaOperatorInvalidAssignmentType.ts(16,1): error TS2322: Type 'boolean' is not assignable to type 'string'.
commaOperatorInvalidAssignmentType.ts(17,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== commaOperatorInvalidAssignmentType.ts (6 errors) ====
    declare var BOOLEAN: boolean;
    declare var NUMBER: number;
    declare var STRING: string;
    
    declare var resultIsBoolean: boolean
    declare var resultIsNumber: number
    declare var resultIsString: string
    
    //Expect errors when the results type is different form the second operand
    resultIsBoolean = (BOOLEAN, STRING);
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
    resultIsBoolean = (BOOLEAN, NUMBER);
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    
    resultIsNumber = (NUMBER, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
    resultIsNumber = (NUMBER, STRING);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    resultIsString = (STRING, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
    resultIsString = (STRING, NUMBER);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    